--- a/src/app/core/component/navbar/navbar.component.html
+++ b/src/app/core/component/navbar/navbar.component.html
@@ -7,7 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a routerLink="/activity/new" class="nav-link">Add activity</a>
+        <a routerLink="/activity/new" class="nav-link">Add</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/activity/feed" class="nav-link">Feed</a>
       </li>
       <li class="nav-item">
         <a routerLink="/activity/statistics" class="nav-link">Stats</a>
