--- a/src/app/core/component/navbar/navbar.component.html
+++ b/src/app/core/component/navbar/navbar.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a routerLink="/activity/statistics" class="nav-link">Stats</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="/activity/progress" class="nav-link">Progress</a>
+      </li>
     </ul>
   </div>
 </nav>
