--- a/src/app/activity/component/activity-feed/activity-feed.component.css
+++ b/src/app/activity/component/activity-feed/activity-feed.component.css
@@ -1,11 +1,16 @@
 .list-element {
-  padding-bottom: 6px;
-  padding-top: 6px;
+  padding-bottom: 2px;
+  padding-top: 2px;
+  font-size: 14px;
+}
+
+.item-value {
+  margin-left: 100px;
 }
 
 .card-body {
-  padding-bottom: 5px;
-  padding-top: 10px;
+  padding-bottom: 2px;
+  padding-top: 5px;
 }
 
 .card {
@@ -18,18 +23,19 @@
 .day-card {
   width: 50rem;
   padding-left: 15px;
-  padding-bottom: 6px;
-  margin-top: 15px;
-
+  padding-bottom: 2px;
+  margin-top: 10px;
+  background: #e5ffff;
 }
 
-.day-card > h5 {
-  font-size: 24px;
-  font-weight: bold;
+.activity-title {
+  font-size: 18px;
 }
 
 .activity-card {
   width: 40rem;
+  background: #b2ebf2;
+  margin-bottom: 5px;
 }
 
 .edit-icon {
@@ -49,4 +55,9 @@
 
 .skull-icon:hover {
   color: #ff6f60;
+}
+
+.day-title {
+  font-size: 26px;
+  margin-bottom: 5px;
 }
