--- a/src/app/core/component/navbar/navbar.component.html
+++ b/src/app/core/component/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a routerLink="/activity/new" class="nav-link">Add</a>
       </li>
@@ -17,6 +17,17 @@
       </li>
       <li class="nav-item">
         <a routerLink="/activity/progress" class="nav-link">Progress</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li *ngIf="userService.user" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img src="{{userService.user.photoUrl}}" width="40" height="40" class="rounded-circle" alt="Profile image"/>
+          <span style="margin-left: 10px">{{userService.user.firstName}}</span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" (click)="onSignOut()">Sign Out</a>
+        </div>
       </li>
     </ul>
   </div>
