--- a/src/app/activity/component/activity-feed/activity-feed.component.html
+++ b/src/app/activity/component/activity-feed/activity-feed.component.html
@@ -25,7 +25,7 @@
               <div class="col-3">Amount:</div>
               <div class="col">
                 {{activity.value.measure.value}}
-                <span *ngIf="stats[activity.value.type].max == activity.value.measure.value" class="badge badge-success">Record!</span>
+                <span *ngIf="getMaxForActivityType(activity.value.type).value.max == activity.value.measure.value" class="badge badge-success">Record!</span>
               </div>
             </div>
           </li>
