--- a/src/app/activity/component/activity-feed/activity-feed.component.css
+++ b/src/app/activity/component/activity-feed/activity-feed.component.css
@@ -1,63 +1,18 @@
-.list-element {
-  padding-bottom: 2px;
-  padding-top: 2px;
-  font-size: 14px;
+.activity-result-list {
+  width: 30rem;
+  margin-bottom: 30px;
 }
 
-.item-value {
-  margin-left: 100px;
+.header {
+  font-weight: bold;
+  font-size: 20px;
 }
 
-.card-body {
-  padding-bottom: 2px;
-  padding-top: 5px;
+.result-col {
+  width: 10rem;
 }
 
 .card {
-  border-style: solid;
-  border-left-width: 4px;
-  border-right-width: 4px;
-  border-bottom-width: 4px;
-}
-
-.day-card {
-  width: 50rem;
-  padding-left: 15px;
-  padding-bottom: 2px;
-  margin-top: 10px;
-  background: #e5ffff;
-}
-
-.activity-title {
-  font-size: 18px;
-}
-
-.activity-card {
-  width: 40rem;
-  background: #b2ebf2;
-  margin-bottom: 5px;
-}
-
-.edit-icon {
-  color: #004ba0;
-  cursor: pointer;
-}
-
-.edit-icon:hover {
-  color: #63a4ff;
-}
-
-.skull-icon {
-  margin-left: 20px;
-  color: #ab000d;
-  cursor: pointer;
-}
-
-.skull-icon:hover {
-  color: #ff6f60;
-}
-
-.day-title {
-  font-size: 26px;
-  margin-bottom: 5px;
+  width: 50vw;
+  margin: 0 auto;
 }
