modified view on edit activity panel

--- a/src/app/activity/component/activity-dashboard/add-activity/add-activity.component.html
+++ b/src/app/activity/component/activity-dashboard/add-activity/add-activity.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="addActivityFormGroup" (ngSubmit)="onActivitySubmit()">
   <mat-card class="add-form">
     <mat-card-header>
-      <mat-card-title>Add Activity</mat-card-title>
+      <mat-card-title>ADD ACTIVITY</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
