--- a/src/app/activity/component/activity-statistics/activity-statistics.component.html
+++ b/src/app/activity/component/activity-statistics/activity-statistics.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-  <mat-card-title>Load stats</mat-card-title>
+  <mat-card-title>LOAD STATS</mat-card-title>
   <mat-card-content>
     <mat-form-field appearance="standard">
       <input matInput type="number" placeholder="Amount" [(ngModel)]="numberOfDaysForStats"/>
@@ -10,7 +10,7 @@
 </mat-card>
 
 <mat-card style="height: 400px">
-  <mat-card-title>Fitness points</mat-card-title>
+  <mat-card-title>FITNESS POINTS</mat-card-title>
   <mat-card-content>
     <ngx-charts-bar-vertical
       [view]="view"
