modified ouath login

--- a/src/app/user/component/signin/sign-in.component.html
+++ b/src/app/user/component/signin/sign-in.component.html
@@ -1,1 +1,10 @@
-<button class="btn btn-primary" (click)="signIn()">Login</button>
+
+
+
+<mat-card style="margin: 0 auto; width: 40vw">
+  <mat-card-title>LOGIN AS</mat-card-title>
+  <mat-card-content>
+    <button mat-raised-button color="primary" (click)="signIn()">FACEBOOK</button>
+  </mat-card-content>
+</mat-card>
+
