--- a/src/app/user/component/signin/sign-in.component.html
+++ b/src/app/user/component/signin/sign-in.component.html
@@ -4,7 +4,7 @@
 <mat-card style="margin: 0 auto; width: 40vw">
   <mat-card-title>LOGIN AS</mat-card-title>
   <mat-card-content>
-    <button mat-raised-button color="primary" (click)="signIn()">FACEBOOK</button>
+    <button mat-raised-button color="primary" (click)="signIn()">FACEBOOK <img src="https://img.icons8.com/color/48/000000/facebook-circled.png"/></button>
   </mat-card-content>
 </mat-card>
 
