--- a/src/app/activity/component/activity-dashboard/goal-panel/goal-panel.component.html
+++ b/src/app/activity/component/activity-dashboard/goal-panel/goal-panel.component.html
@@ -5,7 +5,11 @@
   </mat-card-title>
   <mat-card-subtitle>Manage your activity goals</mat-card-subtitle>
   <mat-card-content>
-    <app-add-goal *ngIf="goalAddIconClicked"></app-add-goal>
-    <app-goal-list></app-goal-list>
+    <app-add-goal
+      *ngIf="goalAddIconClicked"
+      (activityGoalAdded)="onGoalAdded($event)"
+      [configs]="configs"></app-add-goal>
+    <app-goal-list
+      [goals]="goals"></app-goal-list>
   </mat-card-content>
 </mat-card>
