--- a/src/app/activity/component/activity-dashboard/goal-panel/goal-list/goal-list.component.html
+++ b/src/app/activity/component/activity-dashboard/goal-panel/goal-list/goal-list.component.html
@@ -2,6 +2,8 @@
 <mat-card>
   <mat-card-title class="title">CURRENT GOALS</mat-card-title>
   <mat-card-content>
-    <app-goal-element *ngFor="let goal of goals" [goal]="goal"></app-goal-element>
+    <app-goal-element
+      *ngFor="let goal of goals"
+      [goal]="goal"></app-goal-element>
   </mat-card-content>
 </mat-card>
