--- a/src/app/activity/component/activity-dashboard/goal-panel/goal-list/goal-element/goal-element.component.html
+++ b/src/app/activity/component/activity-dashboard/goal-panel/goal-list/goal-element/goal-element.component.html
@@ -1,13 +1,13 @@
 <mat-grid-list cols="10" rowHeight="50px">
   <mat-grid-tile [colspan]="4" [rowspan]="1" style="text-align: left">
-    <div class="inside-grid-left">TYPE: {{goal.activityType}}</div>
+    <div class="inside-grid-left">TYPE: {{goal.value.activityType}}</div>
   </mat-grid-tile>
   <mat-grid-tile [colspan]="4" [rowspan]="1">
-    <div class="inside-grid-left">PERIOD: {{goal.period}}</div>
+    <div class="inside-grid-left">PERIOD: {{goal.value.period}}</div>
   </mat-grid-tile>
 </mat-grid-list>
 <mat-progress-bar
   mode="determinate"
-  value="{{(goal.currentGoal.amount / goal.goalAmount) * 100}}"
+  value="{{(goal.value.currentGoal.amount / goal.value.goalAmount) * 100}}"
   class="progressbar"></mat-progress-bar>
-<div>{{goal.currentGoal.amount}}/{{goal.goalAmount}} {{goal.goalMeasure}}</div>
+<div>{{goal.value.currentGoal.amount}}/{{goal.value.goalAmount}} {{goal.value.goalMeasure}}</div>
